# autohelp_uz

./: .env  .env.example  .env.local.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  autohelp_local.db  check_columns.py  deploy.sh  docker-compose.yml  main.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  reset_db.py  seed.py  start.sh  test_db.py
alembic/: env.py
alembic/versions/: 20260418_0001_initial_schema.py  20260516_0002_add_missing_fields.py  20260516_0002_add_operational_bot_columns.py  20260516_0003_fix_column_types.py  20260516_0004_database_healing.py  20260516_0005_fix_integrity_errors.py  7cc9bea8c3d3_add_feedback_and_shortcomings.py
bot/filters/: __init__.py  role_filter.py
bot/handlers/: __init__.py  errors.py
bot/keyboards/: admin_kb.py  (+3 more)
core/: __init__.py  config.py  database.py  redis.py
docs/: operations-runbook.md  system-blueprint.md
locales/: __init__.py  texts.py
models/: __init__.py  audit.py  district.py  master.py  master_specialization.py  order.py  order_draft.py  order_history.py  payment.py  review.py  staff.py  user.py
repositories/: __init__.py  master_repo.py  order_draft_repo.py  order_repo.py  stats_repo.py  user_repo.py
schemas/: __init__.py  schemas.py
services/: __init__.py  env_bootstrap.py  notification_service.py  order_service.py
src/: inspect_db.py  preflight.py
tasks/: backup.py  dispatcher_auto_video.py  order_draft_reminder.py  reports.py  sla_monitor.py
tests/: conftest.py  test_migrations.py  test_order_service.py
utils/: __init__.py  logger.py
web/: app.py
(+54 files in other folders)
