[project]
name = "autohelp-platform"
version = "0.1.0"
description = "AutoHelp.uz emergency Telegram bot and admin backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1,<4.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "redis>=5.0.4",
  "aiosqlite>=0.20.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "apscheduler>=3.10.4",
  "python-json-logger>=2.0.7",
  "openpyxl>=3.1.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
